Ingress and Ingress controller/new_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awscloudops-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - awscloudops.shop
    secretName: awscloudops-tls
  rules:
  - host: awscloudops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
